# atria

./: CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake  PrintProperties.cmake  atria.pc.in
